--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PORT=3000
-BASE_URL=http://localhost:3000
+PORT=3100
+BASE_URL=http://localhost:3100
 
-DATABASE_HOST=localhost
-DATABASE_NAME=
+DATABASE_HOST=0.0.0.0
+DATABASE_NAME=postgres
 DATABASE_USER=postgres
 DATABASE_PASSWORD=root
 DATABASE_PORT=5432
